# llamaindex-dlthub

./: .gitignore  README.md  __deployment__.py  generate_invoices.py  llama_dlt_pipeline.py  pyproject.toml
.claude/rules/: data-exploration-workflow.md  init-dlthub-workspace.md  rest-api-pipeline-workflow.md
.claude/skills/adjust-endpoint/: SKILL.md
.claude/skills/create-rest-api-pipeline/: SKILL.md
.claude/skills/debug-pipeline/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/toolkit-dispatch/: SKILL.md
.claude/skills/view-data/: SKILL.md
.dlt/: .toolkits  config.toml
